# docker-images

./: README.md
.github/ha-gitops-sidecar/: pre-build.sh
.github/scripts/: changed-charts.sh  on_pull_request_detect.sh  on_push_detect.sh  on_workflow_dispatch_detect.sh  read_annotations.sh
.github/workflows/: docker-images.yaml  rebuild.yaml
gitops-sidecar/: Dockerfile
gitops-sidecar/annotations/: index
ha-gitops-sidecar/: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
ha-gitops-sidecar/.github/: pre-build.sh
ha-gitops-sidecar/github/: pre-build.sh
ha-gitops-sidecar/src/ha_gitops_sidecar/: config.py  filesystem.py  git.py  handler.py  main.py  server.py
ha-gitops-sidecar/tests/: conftest.py  test_config.py  test_filesystem.py  test_git.py  test_handler.py  test_logging_config.py  test_server.py  test_validate.py
helm/: Dockerfile
helm/test-chart/: Chart.yaml
helm/test-chart/tests/: configmap_test.yaml
