[project]
name = "ha-gitops-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml==6.0.3",
]

[project.scripts]
ha-gitops-sidecar = "ha_gitops_sidecar.main:main"

[build-system]
requires = ["hatchling>=1.16.5"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.0",
    "ruff>=0.15.12",
]

[tool.uv]
default-groups = ["dev"]

[tool.pyright]
include = ["src/**/*.py", "tests/**/*.py"]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
line-length = 120
target-version = "py312"
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: requires a running Docker container (built via `task build`)"]
